--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://github.com/Muniox">Muniox</a>.
       </p>
     </footer>
   </body>
